# reasoning-honesty-lab

./: .gitignore  README.md  TESTING.md
backend/: .env.example  README.md  config.py  main.py  pyproject.toml
backend/cache/: store.py
backend/rl/: env.py  grading.py  issues.py  reward.py  train.py
backend/scripts/: benchmark_training.py  compare_before_after.py  generate_mock_baseline.py  generate_mock_runs.py  live_reward_benchmark.py  precompute_baseline.py  test_training.py  test_tts_reward.py  verify_training.py
backend/tests/: test_issues.py  test_reward.py  test_tts.py
backend/tts/: client.py  perturb.py  scorer.py  segmenter.py
data/: examples.json
data/baseline/: baseline_analysis.json
data/runs/benchmark_20260509_154710/: config.json  metrics.jsonl  status.json
data/runs/benchmark_20260509_162233/: config.json  metrics.jsonl  status.json
data/runs/live_benchmark_20260512_210430/: checkpoint.json  config.json  improved_analysis.json  live_reward_benchmark.json  metrics.jsonl  run_result.json  status.json
data/runs/mock_run_20260509_1/: checkpoint.json  config.json  improved_analysis.json  metrics.jsonl  run_result.json  status.json
data/runs/mock_run_20260509_2/: checkpoint.json  config.json  (+4 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ComparisonPane.tsx  IssuesBanner.tsx  MathText.tsx  MetricStrip.tsx  ProblemSelector.tsx  ReasoningTrace.tsx  StepHeatmap.tsx  TrainingPanel.tsx
frontend/lib/: api.ts  types.ts
frontend/types/: react-katex.d.ts
(+25 files in other folders)
